update ansible config files

--- a/fitcycle_ansible/inventory/ec2.ini
+++ b/fitcycle_ansible/inventory/ec2.ini
@@ -169,6 +169,9 @@ group_by_tag_none = True
 # environment and type of host.
 stack_filters = False
 
+#Retrieve only instances in specified VPC
+#instance_filters = vpc-0b08d47503fdcd0
+
 # Retrieve only instances with (key=value) env=staging tag
 # instance_filters = tag:env=staging
 
