Update with aws_rds and aws_ec2 ansible inventory modules

--- a/fitcycle_ansible_with_rds/roles/api/tasks/main.yml
+++ b/fitcycle_ansible_with_rds/roles/api/tasks/main.yml
@@ -23,4 +23,4 @@
 
 - name: App is deployed and ready
   debug:
-    msg: "App load balanced at following IPs: {{ groups['tag_Tier_WEB'] }}"
+    msg: "App load balanced at following IPs: {{ groups['WEB'] }}"
