--- a/fitcycle_ansible/ansible.cfg
+++ b/fitcycle_ansible/ansible.cfg
@@ -1,6 +1,8 @@
 [defaults]
-inventory = ./inventory
+inventory = ./inventory/hosts.aws_ec2.yaml
 private_key_file = ~/.ssh/id_rsa
 remote_user = ubuntu
 host_key_checking = false
 
+[inventory]
+enable_plugins = host_list, script, yaml, aws_ec2, aws_rds
