--- a/fitcycle_ansible/configure_fitcycle.yml
+++ b/fitcycle_ansible/configure_fitcycle.yml
@@ -1,22 +1,23 @@
-- hosts: "tag_Tier_DBLB"
+- hosts: "DBLB"
   gather_facts: false
   roles:
-    - dblb 
+    - dblb
 
-- hosts: "tag_Tier_APP"
+- hosts: "APP"
   become: true
   strategy: debug
   gather_facts: false
   roles:
     - app
 
-- hosts: "tag_Tier_API"
+- hosts: "API"
   become: true
   gather_facts: false
   roles:
     - api
 
-- hosts: "tag_Tier_WEB"
+- hosts: "WEB"
   gather_facts: false
   roles:
     - web
+
