Update Ansible RDS yaml

--- a/fitcycle_ansible_with_rds/inventory/hosts.aws_rds.yaml
+++ b/fitcycle_ansible_with_rds/inventory/hosts.aws_rds.yaml
@@ -5,5 +5,6 @@ keyed_groups:
    - key: tags.Tier
      separator: ''
 
+# Provide the ARN for the rds-db-instance. You can obtain this from Terraform output or AWS Console
 filters:
-  db-instance-identifier: rds-fitcycle
+  db-instance-id:
